--- a/profiles/aguste-rodin.html
+++ b/profiles/aguste-rodin.html
@@ -48,6 +48,21 @@
                         <img src='../img/sculptures/auguste-rodin/man-with-broken-nose.png' width="300" height="200">
                         <div class="desc">Art Piece: Man with Broken Nose<br>Artist: Auguste Rodin
                             <div class="price">Price: 100$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>Man with Broken Nose</h1>
+                                    <img src="../img/sculptures/auguste-rodin/man-with-broken-nose.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 31.2cm x 19cm x 16.3cm</p>
+                                    <p><b>Year</b>: 1863</p>
+                                    <p><b>Type</b>: Bronze</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -55,6 +70,21 @@
                         <img src='../img/sculptures/auguste-rodin/the-burghers-of-calais.png' width="300" height="200">
                         <div class="desc">Art Piece: Burghers of Calais<br>Artist: Auguste Rodin
                             <div class="price">Price: 120$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>Burghers of Calais</h1>
+                                    <img src="../img/sculptures/auguste-rodin/the-burghers-of-calais.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 201.6cm x 205.4cm x 195.9cm</p>
+                                    <p><b>Year</b>: 1889</p>
+                                    <p><b>Type</b>: Bronze</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -62,6 +92,21 @@
                         <img src='../img/sculptures/auguste-rodin/the-cathedral.png' width="300" height="200">
                         <div class="desc">Art Piece: The Cathedral<br>Artist: Auguste Rodin
                             <div class="price">Price: 200$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>The Cathedral</h1>
+                                    <img src="../img/sculptures/auguste-rodin/the-cathedral.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 62.2cm x 27.3cm x 29.8cm</p>
+                                    <p><b>Year</b>: 1908</p>
+                                    <p><b>Type</b>: Stone(original)/Bronze casting</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -69,6 +114,21 @@
                         <img src='../img/sculptures/auguste-rodin/the-thinker.png' width="300" height="200">
                         <div class="desc">Art Piece: The Thinker<br>Artist: Auguste Rodin
                             <div class="price">Price: 300$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>The Thinker</h1>
+                                    <img src="../img/sculptures/auguste-rodin/the-thinker.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 1,89m x 98cm x 1,4m</p>
+                                    <p><b>Year</b>: 1904</p>
+                                    <p><b>Type</b>: Bronze</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -85,4 +145,5 @@
             <!--Footer ending-->
     </body>
     <script src="../js/profile.js"></script>
+    <script src="../js/details.js"></script>
 </html>
