--- a/profiles/donatello.html
+++ b/profiles/donatello.html
@@ -48,6 +48,21 @@
                         <img src='../img/sculptures/donatello/equestrian-statue-of-gattamelata.png' width="300" height="200">
                         <div class="desc">Art Piece: Equestrian Statue of Gattamelata<br>Artist: Donatello
                             <div class="price">Price: 200$</div>
+                             <!-- Trigger/Open The Modal -->
+                             <button class="sendbtn myBtn">Details</button>
+                             <!-- The Modal -->
+                             <div class="myModal modal">
+                              <!-- Modal content -->
+                                 <div class="modal-content">
+                                     <span class="close">&times;</span>
+                                     <h1>Equestrian Statue of Gattamelata</h1>
+                                    <img src="../img/sculptures/donatello/equestrian-statue-of-gattamelata.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 100cm x256cm x170cm</p>
+                                    <p><b>Year</b>: 1453</p>
+                                    <p><b>Type</b>: Bronze</p>
+                                    <p></p>
+                                 </div>
+                             </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -55,6 +70,21 @@
                         <img src='../img/sculptures/donatello/john-the-evangelist.png' width="300" height="200">
                         <div class="desc">Art Piece: John the Evangelist<br>Artist: Donatello
                             <div class="price">Price: 120$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>John the Evangelist</h1>
+                                    <img src="../img/sculptures/donatello/john-the-evangelist.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 88cm x 210cm</p>
+                                    <p><b>Year</b>: 1415</p>
+                                    <p><b>Type</b>: Marble</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -62,6 +92,21 @@
                         <img src='../img/sculptures/donatello/saint-mark.png' width="300" height="200">
                         <div class="desc">Art Piece: Saint Mark<br>Artist: Donatello
                             <div class="price">Price: 110$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>Saint Mark</h1>
+                                    <img src="../img/sculptures/donatello/saint-mark.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 236cm</p>
+                                    <p><b>Year</b>: 1413</p>
+                                    <p><b>Type</b>: Marble</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -69,6 +114,21 @@
                         <img src='../img/sculptures/donatello/zuccone.png' width="300" height="200">
                         <div class="desc">Art Piece: Zuccone<br>Artist: Donatello
                             <div class="price">Price: 540$</div>
+                             <!-- Trigger/Open The Modal -->
+                             <button class="sendbtn myBtn">Details</button>
+                             <!-- The Modal -->
+                             <div class="myModal modal">
+                              <!-- Modal content -->
+                                 <div class="modal-content">
+                                     <span class="close">&times;</span>
+                                     <h1>Zuccone</h1>
+                                    <img src="../img/sculptures/donatello/zuccone.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 195cm x 54cm x 38cm</p>
+                                    <p><b>Year</b>: 1425</p>
+                                    <p><b>Type</b>: Marble</p>
+                                    <p></p>
+                                 </div>
+                             </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -85,4 +145,5 @@
             <!--Footer ending-->
     </body>
     <script src="../js/profile.js"></script>
+    <script src="../js/details.js"></script>
 </html>
