--- a/profiles/henry-moore.html
+++ b/profiles/henry-moore.html
@@ -48,6 +48,21 @@
                         <img src='../img/sculptures/henry-moore/nuclear-energy.png' width="300" height="200">
                         <div class="desc">Art Piece: Nuclear Energy<br>Artist: Henry Moore
                             <div class="price">Price: 300$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>Nuclear Energy</h1>
+                                    <img src="../img/sculptures/henry-moore/nuclear-energy.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 4.3m x 2.4m x 0.6m </p>
+                                    <p><b>Year</b>: 1966</p>
+                                    <p><b>Type</b>: Bronze</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -55,6 +70,21 @@
                         <img src='../img/sculptures/henry-moore/seated-woman.png' width="300" height="200">
                         <div class="desc">Art Piece: Seated Woman<br>Artist: Henry Moore
                             <div class="price">Price: 200$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>Seated Woman</h1>
+                                    <img src="../img/sculptures/henry-moore/seated-woman.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 1488 x 1394 x 914 mm </p>
+                                    <p><b>Year</b>: 1957</p>
+                                    <p><b>Type</b>: Bronze</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -62,6 +92,21 @@
                         <img src='../img/sculptures/henry-moore/three-standing-figures.png' width="300" height="200">
                         <div class="desc">Art Piece: Three Standing Figures<br>Artist: Henry Moore
                             <div class="price">Price: 100$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>Three Standing Figures</h1>
+                                    <img src="../img/sculptures/henry-moore/three-standing-figures.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 230 x 116 x 102 mm </p>
+                                    <p><b>Year</b>: 1947</p>
+                                    <p><b>Type</b>: Plaster</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -69,6 +114,21 @@
                         <img src='../img/sculptures/henry-moore/two-piece-reclining-figure-points.png' width="300" height="200">
                         <div class="desc">Art Piece: Two Piece Reclining Figure Points<br>Artist: Henry Moore
                             <div class="price">Price: 500$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>Two Piece Reclining Figure Points</h1>
+                                    <img src="../img/sculptures/henry-moore/two-piece-reclining-figure-points.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>: 365 cm</p>
+                                    <p><b>Year</b>: 1970</p>
+                                    <p><b>Type</b>: Bronze</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -85,4 +145,5 @@
             <!--Footer ending-->
     </body>
     <script src="../js/profile.js"></script>
+    <script src="../js/details.js"></script>
 </html>
