--- a/profiles/michelangelo.html
+++ b/profiles/michelangelo.html
@@ -48,6 +48,21 @@
                         <img src='../img/sculptures/michelangelo/david.png' width="300" height="200">
                         <div class="desc">Art Piece: David<br>Artist: Michelangelo
                             <div class="price">Price: 200$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>David</h1>
+                                <img src="../img/sculptures/michelangelo/david.png" alt="" style="width: 300px; height:300px;">
+                                <p><b>Dimensions</b>: 517cm x 199cm</p>
+                                <p><b>Year</b>: 1501-1504</p>
+                                <p><b>Type</b>: Marble</p>
+                                <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -55,6 +70,21 @@
                         <img src='../img/sculptures/michelangelo/madonna-of-bruges.png' width="300" height="200">
                         <div class="desc">Art Piece: Madonna of Bruges<br>Artist: Michelangelo
                             <div class="price">Price: 100$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>Madonna of Bruges</h1>
+                                    <img src="../img/sculptures/michelangelo/madonna-of-bruges.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>:200cm</p>
+                                    <p><b>Year</b>: 1501-1504</p>
+                                    <p><b>Type</b>: Marble</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -62,6 +92,21 @@
                         <img src='../img/sculptures/michelangelo/moses.png' width="300" height="200">
                         <div class="desc">Art Piece: Moses<br>Artist: Michelangelo
                             <div class="price">Price: 400$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>Moses</h1>
+                                    <img src="../img/sculptures/michelangelo/moses.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>:235cm x 210cm</p>
+                                    <p><b>Year</b>: 1513-1515</p>
+                                    <p><b>Type</b>: Marble</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -69,6 +114,21 @@
                         <img src='../img/sculptures/michelangelo/pieta.png' width="300" height="200">
                         <div class="desc">Art Piece: Pieta<br>Artist: Michelangelo
                             <div class="price">Price: 100$</div>
+                            <!-- Trigger/Open The Modal -->
+                            <button class="sendbtn myBtn">Details</button>
+                            <!-- The Modal -->
+                            <div class="myModal modal">
+                             <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <h1>Pieta</h1>
+                                    <img src="../img/sculptures/michelangelo/pieta.png" alt="" style="width: 300px; height:300px;">
+                                    <p><b>Dimensions</b>:174cm x 195cm</p>
+                                    <p><b>Year</b>: 1498-1499</p>
+                                    <p><b>Type</b>: Marble</p>
+                                    <p></p>
+                                </div>
+                            </div>
                             <a href="../address.php"><button class="buy">Buy</button></a>
                         </div>
                     </div>
@@ -85,4 +145,5 @@
             <!--Footer ending-->
     </body>
     <script src="../js/profile.js"></script>
+    <script src="../js/details.js"></script>
 </html>
